docs/agents/evidence/331-runtime-hardening/supported-guest-20261007/guest/guest-docker-firewall-live.txt
# Generated by iptables-save v1.8.10 (nf_tables) on Wed Oct  7 19:38:21 2026
*raw
:PREROUTING ACCEPT [195713:327833983]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -d 172.18.0.2/32 ! -i br-bf25d0f815f9 -j DROP
-A PREROUTING -d 172.25.0.2/32 ! -i br-14064b6196da -j DROP
-A PREROUTING -d 172.18.0.3/32 ! -i br-bf25d0f815f9 -j DROP
-A PREROUTING -d 172.18.0.4/32 ! -i br-bf25d0f815f9 -j DROP
-A PREROUTING -d 127.0.0.1/32 ! -i lo -p tcp -m tcp --dport 19571 -j DROP
COMMIT
# Completed on Wed Oct  7 19:38:21 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Wed Oct  7 19:38:21 2026
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER -d 172.18.0.4/32 ! -i br-bf25d0f815f9 -o br-bf25d0f815f9 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER ! -i br-bf25d0f815f9 -o br-bf25d0f815f9 -j DROP
-A DOCKER ! -i br-14064b6196da -o br-14064b6196da -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-BRIDGE -o br-bf25d0f815f9 -j DOCKER
-A DOCKER-BRIDGE -o br-14064b6196da -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-bf25d0f815f9 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-CT -o br-14064b6196da -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-FORWARD -i br-bf25d0f815f9 -j ACCEPT
-A DOCKER-FORWARD -i br-dada937ff9b9 -o br-dada937ff9b9 -j ACCEPT
-A DOCKER-FORWARD -i br-3c6a6131fbb9 -o br-3c6a6131fbb9 -j ACCEPT
-A DOCKER-FORWARD -i br-51eaa7f8ba63 -o br-51eaa7f8ba63 -j ACCEPT
-A DOCKER-FORWARD -i br-88601ce9c6f5 -o br-88601ce9c6f5 -j ACCEPT
-A DOCKER-FORWARD -i br-b0565d3f3dcc -o br-b0565d3f3dcc -j ACCEPT
-A DOCKER-FORWARD -i br-14064b6196da -j ACCEPT
-A DOCKER-FORWARD -i br-cf679ca3c4da -o br-cf679ca3c4da -j ACCEPT
-A DOCKER-FORWARD -i br-cc4436ba5c4a -o br-cc4436ba5c4a -j ACCEPT
-A DOCKER-FORWARD -i br-cacb863c8d38 -o br-cacb863c8d38 -j ACCEPT
-A DOCKER-INTERNAL ! -s 172.27.0.0/16 -o br-cacb863c8d38 -j DROP
-A DOCKER-INTERNAL ! -d 172.27.0.0/16 -i br-cacb863c8d38 -j DROP
-A DOCKER-INTERNAL ! -s 172.26.0.0/16 -o br-cc4436ba5c4a -j DROP
-A DOCKER-INTERNAL ! -d 172.26.0.0/16 -i br-cc4436ba5c4a -j DROP
-A DOCKER-INTERNAL ! -s 172.23.0.0/16 -o br-cf679ca3c4da -j DROP
-A DOCKER-INTERNAL ! -d 172.23.0.0/16 -i br-cf679ca3c4da -j DROP
-A DOCKER-INTERNAL ! -s 172.24.0.0/16 -o br-b0565d3f3dcc -j DROP
-A DOCKER-INTERNAL ! -d 172.24.0.0/16 -i br-b0565d3f3dcc -j DROP
-A DOCKER-INTERNAL ! -s 172.22.0.0/16 -o br-88601ce9c6f5 -j DROP
-A DOCKER-INTERNAL ! -d 172.22.0.0/16 -i br-88601ce9c6f5 -j DROP
-A DOCKER-INTERNAL ! -s 172.21.0.0/16 -o br-51eaa7f8ba63 -j DROP
-A DOCKER-INTERNAL ! -d 172.21.0.0/16 -i br-51eaa7f8ba63 -j DROP
-A DOCKER-INTERNAL ! -s 172.20.0.0/16 -o br-3c6a6131fbb9 -j DROP
-A DOCKER-INTERNAL ! -d 172.20.0.0/16 -i br-3c6a6131fbb9 -j DROP
-A DOCKER-INTERNAL ! -s 172.19.0.0/16 -o br-dada937ff9b9 -j DROP
-A DOCKER-INTERNAL ! -d 172.19.0.0/16 -i br-dada937ff9b9 -j DROP
COMMIT
# Completed on Wed Oct  7 19:38:21 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Wed Oct  7 19:38:21 2026
*nat
:PREROUTING ACCEPT [165:10224]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [95:7001]
:POSTROUTING ACCEPT [95:7001]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.25.0.0/16 ! -o br-14064b6196da -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-bf25d0f815f9 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -d 127.0.0.1/32 ! -i br-bf25d0f815f9 -p tcp -m tcp --dport 19571 -j DNAT --to-destination 172.18.0.4:8080
COMMIT
# Completed on Wed Oct  7 19:38:21 2026
